--- a/apache-flink-01/conf/flink-conf.yaml
+++ b/apache-flink-01/conf/flink-conf.yaml
@@ -25,8 +25,8 @@ taskmanager.memory.process.size: 1728Mb
 taskmanager.numberOfTaskSlots: 2
 
 state.backend: filesystem
-state.checkpoints.dir: file:///tmp/flink-checkpoints-directory
-state.savepoints.dir: file:///tmp/flink-savepoints-directory
+state.checkpoints.dir: file://./tmp/flink-checkpoints-directory
+state.savepoints.dir: file://./tmp/flink-savepoints-directory
 
 heartbeat.interval: 1000
 heartbeat.timeout: 5000
