--- a/apache-flink-01/build.gradle
+++ b/apache-flink-01/build.gradle
@@ -3,6 +3,17 @@ version '1.0'
 
 apply plugin: 'java'
 
+compileJava   {
+    sourceCompatibility = JavaVersion.VERSION_11
+    targetCompatibility = JavaVersion.VERSION_11
+}
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'org.vndataproduct.apacheflink001.ClickEventCount'
+    }
+}
+
 repositories {
     mavenLocal()
     mavenCentral()
