--- a/apache-flink-01/docker-compose.yaml
+++ b/apache-flink-01/docker-compose.yaml
@@ -31,7 +31,7 @@ services:
       - JOB_MANAGER_RPC_ADDRESS=jobmanager
   clickevent-generator:
     image: apache/flink-ops-playground:1-FLINK-1.16-scala_2.12
-    command: "java -classpath /opt/ClickCountJob.jar:/opt/flink/lib/* org.apache.flink.playgrounds.ops.clickcount.ClickEventGenerator --bootstrap.servers kafka:9092 --topic input"
+    command: "java -classpath /opt/ClickCountJob.jar:/opt/flink/lib/* org.vndataproduct.apacheflink001.ClickEventGenerator --bootstrap.servers kafka:9092 --topic input"
     depends_on:
       - kafka
   jobmanager:
